# rusty-graph-code

./: Cargo.toml  README.md
ares/: Cargo.toml
ares/src/: ch1.rs  ch2.rs  ch3.rs  ch4.rs  ch5.rs  ch6.rs  ch7.rs  ch8.rs  main.rs
data/: data-bad-promise.ttl  data-bad.ttl  data-extra.ttl  data.ttl  observations-calliope.ttl  observations.shex  schema.ttl  shapes-closed.ttl  shapes-sparql.ttl  shapes.ttl
grafeo_samples/: Cargo.toml  README.md
grafeo_samples/src/: ch10.rs  ch11.rs  ch12.rs  ch9.rs  main.rs
graph/: Cargo.toml
graph/src/: lib.rs
reasoner/: Cargo.toml
reasoner/src/: lib.rs
validator/: Cargo.toml
validator/src/: lib.rs
