[package]
name = "ares"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "ares"
path = "src/main.rs"

[dependencies]
graph = { path = "../graph" }
reasoner = { path = "../reasoner" }
validator = { path = "../validator" }
oxigraph.workspace = true
anyhow.workspace = true
serde_json.workspace = true
